fix timeline expand clipping

--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ body {
 }
 
 .timeline__item.active .timeline__expand {
-  max-height: 300px;
+  max-height: 600px;
   opacity: 1;
 }
 
